// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Db add member tests Member Role Tests Adds a member role to the database and then deletes it 1`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "My Desc",
  "isPublic": true,
  "name": {
    "en": "en name",
    "fi": "fi name",
  },
  "permissions": [
    "aircraft.admin",
    "booking.admin",
  ],
  "roleId": "TEST_ROLE",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db add member tests add member and update member 1`] = `
{
  "billingId": "MEMBER",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isMembershipApproved": false,
  "isTrainingProgramPilot": false,
  "lastName": "member",
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": undefined,
  "membershipApprovedBy": undefined,
  "phoneNumber": null,
  "postcode": null,
  "roles": [],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db add member tests add member and update member 2`] = `
{
  "billingId": "MEMBER",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": 0,
  "dateOfBirth": null,
  "email": "test@testdata.com",
  "emailVerifiedAt": undefined,
  "firstName": "test2",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isMembershipApproved": false,
  "isTrainingProgramPilot": false,
  "lastName": "member",
  "memberId": 0,
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": undefined,
  "membershipApprovedBy": undefined,
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": 0,
}
`;

exports[`Db query member tests getMemberByEmail should return member data for a valid email address 1`] = `
{
  "billingId": "BILL005",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "pekka.hamalainen@example.com",
  "emailVerifiedAt": undefined,
  "firstName": "Pekka",
  "iceContactName": "Kaisa Hämäläinen",
  "iceContactPhoneNumber": "0441098765",
  "isMembershipApproved": true,
  "isTrainingProgramPilot": false,
  "lastName": "Hämäläinen",
  "memberId": "Pekka1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0445678901",
  "postcode": "20100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Lönnrotinkatu 20",
  "townCity": "Turku",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMemberById should return member data for a valid id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isMembershipApproved": true,
  "isTrainingProgramPilot": true,
  "lastName": "Virtanen",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Db query member tests getMemberById should return member data for a valid member id 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": Any<String>,
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": undefined,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isMembershipApproved": true,
  "isTrainingProgramPilot": true,
  "lastName": "Virtanen",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Db query member tests getMemberRolesByMemberId should return roles for given valid member 1`] = `
[
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with additional flying rights",
    "isPublic": false,
    "name": {
      "en": "Flying Member",
      "fi": "Lento-oikeus",
    },
    "permissions": [
      "flightlog.user",
      "booking.user",
      "aircraft.user",
    ],
    "roleId": "FLYING_MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "Instructor with permissions to manage training",
    "isPublic": true,
    "name": {
      "en": "Instructor",
      "fi": "Lennonopettaja",
    },
    "permissions": [],
    "roleId": "INSTRUCTOR",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
  {
    "createdAt": Any<String>,
    "createdBy": "k1mnimda",
    "description": "MIK member with basic access",
    "isPublic": true,
    "name": {
      "en": "Member",
      "fi": "Jäsen",
    },
    "permissions": [
      "member",
    ],
    "roleId": "MEMBER",
    "updatedAt": Any<String>,
    "updatedBy": "k1mnimda",
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 1`] = `
[
  {
    "email": "admin@mik.fi",
    "first": "MIK",
    "last": "Admin",
    "memberId": "k1mnimda",
    "phoneNumber": null,
    "roles": [
      "ADMIN",
    ],
  },
  {
    "email": "pekka.hamalainen@example.com",
    "first": "Pekka",
    "last": "Hämäläinen",
    "memberId": "Pekka1",
    "phoneNumber": "0445678901",
    "roles": [
      "ADMIN",
      "MEMBER",
    ],
  },
  {
    "email": "antti.heikkinen@example.com",
    "first": "Antti",
    "last": "Heikkinen",
    "memberId": "Antti1",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "email": "juho.kolehmainen@iki.fi",
    "first": "Liisa",
    "last": "Korhonen",
    "memberId": "Liisa1",
    "phoneNumber": "0412345678",
    "roles": [
      "ADMIN",
      "COMMITTEE",
    ],
  },
  {
    "email": "sanna.koskinen@example.com",
    "first": "Sanna",
    "last": "Koskinen",
    "memberId": "Sanna1",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "kaisa.laine@example.com",
    "first": "Kaisa",
    "last": "Laine",
    "memberId": "Kaisa1",
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "email": "anna.makinen@example.com",
    "first": "Anna",
    "last": "Mäkinen",
    "memberId": "Anna1",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "jukka.nieminen@example.com",
    "first": "Jukka",
    "last": "Nieminen",
    "memberId": "Jukka1",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "email": "nurmikko@gmail.com",
    "first": "Marja",
    "last": "Salminen",
    "memberId": "Marja1",
    "phoneNumber": "0490123456",
    "roles": [],
  },
  {
    "email": "juha.seppala@example.com",
    "first": "Juha",
    "last": "Seppälä",
    "memberId": "Juha1",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
]
`;

exports[`Db query member tests getMembers should return everything for admins 2`] = `
{
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "description": "Administrator with full access",
  "isPublic": false,
  "name": {
    "en": "Administrator",
    "fi": "Ylläpitäjä",
  },
  "permissions": [
    "member.admin",
    "flightlog.admin",
    "booking.admin",
    "aircraft.admin",
  ],
  "roleId": "ADMIN",
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`Db query member tests getMembers should return only approved members for valid members 1`] = `
[
  {
    "email": "pekka.hamalainen@example.com",
    "first": "Pekka",
    "last": "Hämäläinen",
    "memberId": "Pekka1",
    "phoneNumber": "0445678901",
    "roles": [
      "MEMBER",
    ],
  },
  {
    "email": "antti.heikkinen@example.com",
    "first": "Antti",
    "last": "Heikkinen",
    "memberId": "Antti1",
    "phoneNumber": "0467890123",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
  {
    "email": "juho.kolehmainen@iki.fi",
    "first": "Liisa",
    "last": "Korhonen",
    "memberId": "Liisa1",
    "phoneNumber": "0412345678",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "sanna.koskinen@example.com",
    "first": "Sanna",
    "last": "Koskinen",
    "memberId": "Sanna1",
    "phoneNumber": "0478901234",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "jukka.nieminen@example.com",
    "first": "Jukka",
    "last": "Nieminen",
    "memberId": "Jukka1",
    "phoneNumber": "0423456789",
    "roles": [
      "INSTRUCTOR",
    ],
  },
  {
    "email": "chris.whellams@gmail.com",
    "first": "Matti",
    "last": "Virtanen",
    "memberId": "Matti1",
    "phoneNumber": "0401234567",
    "roles": [
      "INSTRUCTOR",
      "MEMBER",
    ],
  },
]
`;
